light mode fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,14 +4,15 @@
 
 @layer base {
   :root {
+    /* Light mode colors */
     /* Controls page background */
     --background: 0 0% 100%;
     /* Controls text color */
-    --foreground: 0 0% 98%;
+    --foreground: 0 0% 9%;
     /* Controls button color */
-    --primary: 0 0% 98%;
+    --primary: 0 0% 9%;
     /* Controls filled button text color */
-    --primary-foreground: 0 0% 9%;
+    --primary-foreground: 0 0% 98%;
     /* Component variables */
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
@@ -20,14 +21,14 @@
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
+    --muted-foreground: 0 0% 20%;
     --accent: 0 0% 96.1%;
     --accent-foreground: 0 0% 9%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 360 100% 82.8%;
-    --success: 99 100% 70%;
-    --success-foreground: 99 100% 70%;
-    --border: 0 0% 98%;
+    --success: 142 70% 25%;
+    --success-foreground: 142 70% 25%;
+    --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --chart-1: 12 76% 61%;
@@ -46,7 +47,26 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    /* Dark mode colors */
     --background: 240 2% 8%;
+    --foreground: 0 0% 98%;
+    --primary: 0 0% 98%;
+    --primary-foreground: 0 0% 9%;
+    --card: 240 2% 8%;
+    --card-foreground: 0 0% 98%;
+    --popover: 240 2% 8%;
+    --popover-foreground: 0 0% 98%;
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+    --ring: 240 4.9% 83.9%;
+    --success: 142 70% 45%;
+    --success-foreground: 142 70% 45%;
   }
 }
 
